# piupiu

./: .gitignore  README.md  espidf.bat  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/arduino-esp32-3.2.0/: CMakeLists.txt
components/arduino-esp32-3.2.0/libraries/ESP_SR/src/: ESP_SR.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  my_dht11.cpp  my_parse.cpp  my_wifi.cpp  piupiuStatus.cpp  piupiuStatus.h
main/apps/: AppBase.cc  AppBase.h  AppLog.cpp  AppLog.h  AppManagerLog.h  app.cc  app.h
main/apps/app_base/: AppBase.cc  AppBase.h  AppFactory.h  AppManager.cc  AppManager.h  AppManagerLog.cpp  AppManagerLog.h
main/audio/: AudioManager.cpp  AudioManager.h  readme.md
main/include/: my_dht11.h  my_mqtt.h  my_parse.h  wifi_user.h
main/network/: blufi_basic.cpp  blufi_security.cpp  net_manager.cc  net_manager.h  wifi_manager.cc  wifi_manager.h
main/simulator/: CMakeLists.txt  lv_conf.h  main_sim.cpp  sdl_driver.cpp  sdl_driver.h
